@@ -245,8 +245,14 @@ public abstract class MainFragment extends Fragment implements OnRefreshListener
 
     public void toTop() {
         try {
-            if (Integer.parseInt(toastDescription.getText().toString().split(" ")[0]) > 100) {
+            if (Integer.parseInt(toastDescription.getText().toString().split(" ")[0]) > 40) {
                 listView.setSelection(0);
+                new Handler().postDelayed(new Runnable() {
+                    @Override
+                    public void run() {
+                        hideToastBar(400);
+                    }
+                }, 250);
             } else {
                 listView.smoothScrollToPosition(0);
             }
